--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 gitignore.io help:
   list    - lists the operating systems, programming languages and IDE input types
   :types: - creates .gitignore files for types of operating systems, programming languages or IDEs
+sentry.env
