--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,11 @@
-astroid==2.2.5
-autopep8==1.4.3
-Click==7.0
-entrypoints==0.3
-flake8==3.7.7
-Flask==1.0.2
-isort==4.3.17
+click==7.1.2
+Flask==1.1.2
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.3.1
-Markdown==3.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-mccabe==0.6.1
-mdv==1.7.4
-numpy==1.16.2
-pandas==0.24.2
-pycodestyle==2.5.0
-pyflakes==2.1.1
-Pygments==2.3.1
-pylint==2.3.1
-python-dateutil==2.8.0
-pytz==2019.1
-six==1.12.0
-tabulate==0.8.3
-typed-ast==1.3.1
-Werkzeug==0.15.2
-wrapt==1.11.1
+numpy==1.19.1
+pandas==1.1.2
+python-dateutil==2.8.1
+pytz==2020.1
+six==1.15.0
+Werkzeug==1.0.1
